2007-09-30 20:14 jasper

	* libxfce4panel/xfce-panel-plugin-iface.c,
	  libxfce4panel/xfce-panel-plugin-iface.h,
	  plugins/launcher/launcher.c,
	  plugins/windowlist/windowlist.c: API change for popup menu functions.
	  The API now consists of three functions: 
	  xfce_panel_plugin_arrow_type(), xfce_panel_plugin_position_widget(),
	  and xfce_panel_plugin_menu_position_func(). This last function is
	  intended to be used as a callback function for gtk_menu_popup().
	* plugins/windowlist/windowlist.c: Remove orientation change handler. 
	  There is no need to check both for orientation changes and screen
	  position changes.
	* plugins/windowlist/windowlist.c: Set size for plugin widget instead
	  of button. The size is not properly updated on orientation changes 
	  otherwise.

2007-09-28 13:46 jasper

	* libxfce4panel/xfce-panel-plugin-iface.c,
	  libxfce4panel/xfce-panel-plugin-iface.h,
	  plugins/launcher/launcher.c,
	  plugins/windowlist/windowlist.c: Add convenience functions for 
	  plugin popup menus and adjust launcher and windowlist to make
	  use of the new functionality. Patches by Diego Ongaro.

2007-07-09 22:45 nick

    	* libxfce4panel/*, docs/API/*: Remove the html and xml directories,
      	  those are generated by gtk-doc, 100% symbol coverage and improve
      	  the layout of the chapters.

2007-07-08 12:00 nick

    	* plugins/clock/clock-digital.c: Allow markup and center the string.
    	* plugins/clock/*: Move the localtime functions into 1 util and allow
      	  usage without locatime_r.

2007-07-07 10:32 nick

   	* plugins/clock/clock-lcd.c: Typo, the 8 was test code.

2007-07-06 10:50 nick

    	* plugins/clock/*: Import code.
    	* NEWS: update.
    	* Configure.in.in: Bump GTK dependency to 2.8.0 and add cairo as
      	  new dependency.
    	* po/*: Merge new strings.

2007-05-27 10:50 nick

	* plugins/launcher/launcher-exec.c: Define WAIT_ANY if it's not
	  available in wait.h. Reported by Daichi.

2007-05-26 12:25 nick
